# email-classifier

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  envs.yaml  firebase.json  main.py  makefile  notes.txt  prompts.py  pyproject.toml  requirements.txt
.firebase/: hosting.cHVibGlj.cache
app/api/: routes.py  schemas.py
app/core/: logging.py  middleware.py  settings.py
app/services/: extractor.py  gemini.py
public/: index.html
samples/: Assunto 2ª via de boleto – vencimen.txt  Assunto Agendar reunião de alinhame.txt  Assunto Erro ao importar CSV no pai.txt  Assunto Interesse no plano Business.txt  Assunto Problema no pedido #48291 –.txt  Assunto Solicitação de orçamento –.txt
templates/: index.html
tests/: conftest.py  test_routes.py
